fix(adminv2), #29415: Add user list is not well formed (double scrolling bug)

--- a/projects/ngx-ode-ui/src/lib/components/lightbox/lightbox.component.scss
+++ b/projects/ngx-ode-ui/src/lib/components/lightbox/lightbox.component.scss
@@ -35,7 +35,7 @@ div[content] {
   min-width: 60%;
   max-width: 75%;
   max-height: 75%;
-  overflow: scroll;
+  overflow: hidden;
   background-color: white;
   z-index: 2;
   position: relative;
