feat(adminv2), #21622: Add extra buttons to lightbox-confirm

--- a/projects/ngx-ode-ui/src/lib/components/lightbox-confirm/lightbox-confirm.component.html
+++ b/projects/ngx-ode-ui/src/lib/components/lightbox-confirm/lightbox-confirm.component.html
@@ -5,6 +5,9 @@
   </div>
   <div class="lightbox-confirm-action">
     <button (click)="onConfirm.emit()" class="confirm">{{ confirmText | translate }}</button>
+    <button
+      *ngFor="let extraBtn of extraButtons.slice().reverse(); index as i;"
+      (click)="onExtra.emit(extraButtons.length - 1 - i)" class="confirm">{{ extraBtn | translate }}</button>
     <button (click)="onCancel.emit()" class="cancel">{{ cancelText | translate }}</button>
   </div>
 </ode-lightbox>
