--- a/projects/ngx-ode-ui/src/lib/components/lightbox/lightbox.component.scss
+++ b/projects/ngx-ode-ui/src/lib/components/lightbox/lightbox.component.scss
@@ -34,7 +34,7 @@ div[content] {
   flex: 0 0 auto;
   max-width: 75%;
   max-height: 75%;
-  overflow: hidden;
+  overflow: auto;
   background-color: white;
   z-index: 2;
   position: relative;
