--- a/projects/ngx-ode-ui/src/lib/components/form-field/form-field.component.html
+++ b/projects/ngx-ode-ui/src/lib/components/form-field/form-field.component.html
@@ -1,6 +1,7 @@
 <div class="form-field">
   <label>
     {{ label | translate }}
+    <span *ngIf="required" class="asterisque">*</span>
     <ode-message-sticker *ngIf="help"
                      [type]="'info'"
                      [messages]="[help]">
