--- a/projects/ngx-ode-ui/src/lib/components/mono-select/mono-select.component.html
+++ b/projects/ngx-ode-ui/src/lib/components/mono-select/mono-select.component.html
@@ -4,6 +4,8 @@
       <strong>{{(selectedOption? selectedOption.label : placeholder) | translate}}</strong>
       <ul class="form-select__list lct-form-select__list">
         <li class="form-select__options lct-form-select__options"
+            (click)="$event.stopPropagation(); optionClicked()">{{placeholder | translate}}</li>
+        <li class="form-select__options lct-form-select__options"
             *ngFor="let option of options"
             (click)="$event.stopPropagation(); optionClicked(option)">{{option.label | translate}}</li>
       </ul>
