--- a/projects/ngx-ode-ui/src/lib/components/mono-select/mono-select.component.html
+++ b/projects/ngx-ode-ui/src/lib/components/mono-select/mono-select.component.html
@@ -1,13 +1,13 @@
 <div class="form-select lct-form-select" [ngClass]="{'form-select--opened': opened, 'form-select--disabled': isDisabled}">
   <ul>
     <li class="form-select__options--selected lct-form-select__options--selected">
-      <strong>{{(selectedOption? selectedOption.label : placeholder) | translate}}</strong>
+      <strong>{{selectedOption ? ((translateOptions == true) ? (selectedOption.label | translate) : selectedOption.label) : (placeholder | translate)}}</strong>
       <ul class="form-select__list lct-form-select__list">
         <li class="form-select__options lct-form-select__options"
             (click)="$event.stopPropagation(); optionClicked()">{{placeholder | translate}}</li>
         <li class="form-select__options lct-form-select__options"
             *ngFor="let option of options"
-            (click)="$event.stopPropagation(); optionClicked(option)">{{option.label | translate}}</li>
+            (click)="$event.stopPropagation(); optionClicked(option)">{{(translateOptions == true) ? (option.label | translate) : option.label}}</li>
       </ul>
     </li>
   </ul>
