feat(mono-select): Add support for the disabled option on mono-select

--- a/projects/ngx-ode-ui/src/lib/components/mono-select/mono-select.component.html
+++ b/projects/ngx-ode-ui/src/lib/components/mono-select/mono-select.component.html
@@ -1,4 +1,4 @@
-<div class="form-select lct-form-select" [ngClass]="{'form-select--opened': opened, 'form-select--disabled': isDisabled}">
+<div class="form-select lct-form-select" [ngClass]="{'form-select--opened': opened, 'form-select--disabled': disabled}">
   <ul>
     <li class="form-select__options--selected lct-form-select__options--selected">
       <strong>{{selectedOption ? ((translateOptions == true) ? (selectedOption.label | translate) : selectedOption.label) : (placeholder | translate)}}</strong>
